// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./ProgressBar.stories AlmostComplete 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiBox-root mui-style-1v5z18m"
  >
    <span
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="85"
      class="MuiLinearProgress-root MuiLinearProgress-colorSecondary MuiLinearProgress-determinate progressBar mui-style-1iizkxc-MuiLinearProgress-root"
      role="progressbar"
    >
      <span
        class="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Determinate mui-style-3vqet8-MuiLinearProgress-bar1"
        style="transform: translateX(-15%);"
      />
    </span>
  </div>
</div>
`;

exports[`./ProgressBar.stories Complete 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiBox-root mui-style-1v5z18m"
  >
    <span
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="MuiLinearProgress-root MuiLinearProgress-colorSecondary MuiLinearProgress-determinate progressBar mui-style-1iizkxc-MuiLinearProgress-root"
      role="progressbar"
    >
      <span
        class="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Determinate mui-style-3vqet8-MuiLinearProgress-bar1"
        style="transform: translateX(0%);"
      />
    </span>
  </div>
</div>
`;

exports[`./ProgressBar.stories Empty 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiBox-root mui-style-1v5z18m"
  >
    <span
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="MuiLinearProgress-root MuiLinearProgress-colorSecondary MuiLinearProgress-determinate progressBar mui-style-1iizkxc-MuiLinearProgress-root"
      role="progressbar"
    >
      <span
        class="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Determinate mui-style-3vqet8-MuiLinearProgress-bar1"
        style="transform: translateX(-100%);"
      />
    </span>
  </div>
</div>
`;

exports[`./ProgressBar.stories Partial 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiBox-root mui-style-1v5z18m"
  >
    <span
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="45"
      class="MuiLinearProgress-root MuiLinearProgress-colorSecondary MuiLinearProgress-determinate progressBar mui-style-1iizkxc-MuiLinearProgress-root"
      role="progressbar"
    >
      <span
        class="MuiLinearProgress-bar MuiLinearProgress-barColorSecondary MuiLinearProgress-bar1Determinate mui-style-3vqet8-MuiLinearProgress-bar1"
        style="transform: translateX(-55%);"
      />
    </span>
  </div>
</div>
`;
